// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel when asked to render with additional class  renders with additional class 1`] = `
<div
  className="group flex flex-col gap-1 some-class"
>
  <input
    aria-invalid={false}
    aria-label="Test label"
    autoFocus={false}
    className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none rounded-xl bg-white border-2 border-neutral-light-100 placeholder:text-neutral-light-300 px-3 py-3 text-xl text-black dark:text-white leading-none group-hover:valid:border-primary-300 invalid:border-error  focus:outline-none focus:ring-1 focus:ring-primary-300 focus:border-primary-300 peer order-2"
    data-test-id="test-input"
    disabled={false}
    id="test-input"
    name="test-input"
    onChange={[Function]}
    placeholder="20"
    required={true}
    type="number"
    value={20}
  />
  <label
    className="text-neutral-light-300 dark:text-neutral-dark-300 text-sm font-semibold order-1 peer-focus:text-primary-300 peer-invalid:text-error"
    htmlFor="test-input"
  >
    Test label
  </label>
</div>
`;

exports[`InputLabel when asked to render with label  renders with label 1`] = `
<div
  className="group flex flex-col gap-1"
>
  <input
    aria-invalid={false}
    aria-label="Test label"
    autoFocus={false}
    className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none rounded-xl bg-white border-2 border-neutral-light-100 placeholder:text-neutral-light-300 px-3 py-3 text-xl text-black dark:text-white leading-none group-hover:valid:border-primary-300 invalid:border-error  focus:outline-none focus:ring-1 focus:ring-primary-300 focus:border-primary-300 peer order-2"
    data-test-id="test-input"
    disabled={false}
    id="test-input"
    name="test-input"
    onChange={[Function]}
    placeholder="20"
    required={true}
    type="number"
    value={20}
  />
  <label
    className="text-neutral-light-300 dark:text-neutral-dark-300 text-sm font-semibold order-1 peer-focus:text-primary-300 peer-invalid:text-error"
    htmlFor="test-input"
  >
    Test label
  </label>
</div>
`;
